@startuml system_class_diagram_user_functional_compact
top to bottom direction

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "Пользователь" {
  class User <<actor>>
  class MapPage
}

package "Клиентская логика (Flutter)" {
  class AuthController
  class RunTrackerController
  class ProfileActionsController

  class LoginUseCase
  class RegisterUseCase
  class FinishRunUseCase
  class GetRunHistoryUseCase
  class GetTerritoriesForBboxUseCase
  class GetLastNotificationUseCase
}

package "Клиентские порты (Repository)" {
  interface AuthRepository
  interface RunsRepository
  interface TerritoriesRepository
  interface NotificationsRepository
  interface ProfileRepository
}

package "Backend API (FastAPI)" {
  class AuthRouter <<router>>
  class MeRouter <<router>>
  class RunsRouter <<router>>
  class TerritoriesRouter <<router>>
  class NotificationsRouter <<router>>
}

class "PostgreSQL + PostGIS" as DB <<database>>

' ---- user-to-feature flows ----
User --> MapPage
MapPage --> AuthController
MapPage --> RunTrackerController
MapPage --> ProfileActionsController
MapPage --> GetTerritoriesForBboxUseCase
MapPage --> GetLastNotificationUseCase
MapPage --> GetRunHistoryUseCase

' ---- frontend business logic ----
AuthController --> LoginUseCase
AuthController --> RegisterUseCase
RunTrackerController --> FinishRunUseCase

LoginUseCase --> AuthRepository
RegisterUseCase --> AuthRepository
FinishRunUseCase --> RunsRepository
GetRunHistoryUseCase --> RunsRepository
GetTerritoriesForBboxUseCase --> TerritoriesRepository
GetLastNotificationUseCase --> NotificationsRepository
ProfileActionsController --> ProfileRepository

' ---- backend integration ----
AuthRepository --> AuthRouter
ProfileRepository --> MeRouter
RunsRepository --> RunsRouter
TerritoriesRepository --> TerritoriesRouter
NotificationsRepository --> NotificationsRouter

AuthRouter --> DB
MeRouter --> DB
RunsRouter --> DB
TerritoriesRouter --> DB
NotificationsRouter --> DB

@enduml
